master js file created, and basic zodaic working
text content is in and working, master js file has zodiac algorithm

--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
     <div class="center">
         <h1 class="GoT">Zodiac of Thrones</h1>
     </div>
+    <div id="wrapper">
 
+        <form action="">
+            <label for="zods">Birthday</label>
+            <input type="date" id="zodDate" name="zodDate">
+
+        </form>
+
+        <button id="compute" onclick="computeZod();">COMPUTE</button>
+        <br>
+        
+    </div>
+    <div class="center_text">
+    <div id="showMe">Holla</div>
+    </div>
+    <script src="master.js"></script>
 </body>
 
 </html>
