added h4 element to html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="center">
         <h1 class="GoT">Zodiac of Thrones</h1>
+        <h4 class="GoT">Which Game of Thrones character are you? Type in your birthday and find out:</h4>
     </div>
 
     <div id="wrapper">
@@ -27,7 +28,7 @@
     </div>
 
     <div class="center_text">
-        <div id="showMe">Holla</div>
+        <div id="showMe">Type In Your Birthday Or Click a Character Card</div>
         </div>
 
     <div class="left_col">
