changed font choice for help text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="center">
         <h1 class="GoT">Zodiac of Thrones</h1>
         <h4 class="GoT">Which Game of Thrones character are you? Type in your birthday and find out:</h4>
-        <h5 class="GoT">User birthday must be entered as dd/mm/yyyy</h5>
+        <h5>User birthday must be entered as dd/mm/yyyy</h5>
 
     </div>
 
