--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
 
     <div class="center">
-        <h1 class="GoT">Zodiac of Thrones</h1>
-        <h4 class="GoT">Which Game of Thrones character are you? Type in your birthday and find out:</h4>
-        <h5>User birthday must be entered as dd/mm/yyyy</h5>
+        <h1 class="GoT titleBack">Zodiac of Thrones</h1>
+        <h4 class="GoT textBack">Which Game of Thrones character are you? Type in your birthday and find out:</h4>
+        
 
     </div>
 
@@ -57,6 +57,11 @@
                 <span class="popuptext" id="myPopup">Type in a valid birthday as mm/dd/yyyy or click a button and see your zodiac!</span>
             </div>
         </div>
+
+        <audio src="" id="soundPlayer">
+
+            <p>Your browser doesnt support audio.</p>
+        </audio>
 
     <script src="master.js"></script>
 </body>
